force-app/main/default/objects/Contact/fields/Last_Blacklist_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Blacklist_Check__c</fullName>
    <description>RO-2282</description>
    <inlineHelpText>Zeigt an, wann Blacklist zuletzt geändert oder bestätigt wurde, egal ob Blacklist aktiviert oder deaktiviert ist. Der Timestamp wird automatisch aktualisiert, wenn das Feld sich ändert, kann aber auch manuell angepasst werden</inlineHelpText>
    <label>Last Blacklist Check</label>
    <type>DateTime</type>
</CustomField>