force-app/main/default/objects/Contact/fields/Last_Call_Timestamp_Temp__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Timestamp_Temp__c</fullName>
    <description>Temporary field to backfill last call timestamp while Activity Metrics is broken. Can be removed once ActivityMetric.LastCallDateTime works again.</description>
    <label>Last Call Timestamp (Temp)</label>
    <type>DateTime</type>
</CustomField>