force-app/main/default/objects/Contact/fields/Last_marketing_email_name__c.field-meta.xml
<CustomField>
    <fullName>Last_marketing_email_name__c</fullName>
    <description>https://heyjobs.atlassian.net/browse/RO-1370</description>
    <label>Last marketing email name</label>
    <type>TextArea</type>
</CustomField>