force-app/main/default/objects/Contact/fields/Last_marketting_email_open_date__c.field-meta.xml
<CustomField>
    <fullName>Last_marketting_email_open_date__c</fullName>
    <label>Last marketing email open date</label>
    <type>DateTime</type>
</CustomField>