force-app/main/default/objects/Contact/fields/Last_Outreach_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach_Campaign__c</fullName>
    <description>RO-1411</description>
    <label>Last Outreach Campaign</label>
    <type>TextArea</type>
</CustomField>