force-app/main/default/objects/Contact/fields/Last_Priority_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Priority_Check__c</fullName>
    <description>RO - 2145</description>
    <inlineHelpText>Zeigt das Datum wann das Priority Level das letzte mal verändert wurde. Last Priority Check kann aber auch manuell angepasst werden, e.g. wenn das Last Priority überprüft wurde.</inlineHelpText>
    <label>Last Priority Check</label>
    <type>DateTime</type>
</CustomField>