force-app/main/default/objects/Contact/fields/Last_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher__c</fullName>
    <inlineHelpText>Zeigt die letzte Voucher Kampagne, die dem Kontakt zugeschickt wurde.</inlineHelpText>
    <label>Last Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>