force-app/main/default/objects/Contact/fields/Last_Voucher_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher_Timestamp__c</fullName>
    <inlineHelpText>Zeigt das Datum, wann dem Kontakt die letzte Voucher Kampagne zugeschickt wurde.</inlineHelpText>
    <label>Last Voucher Timestamp</label>
    <type>Date</type>
</CustomField>