force-app/main/default/objects/Contact/fields/Latest_import_title__c.field-meta.xml
<CustomField>
    <fullName>Latest_import_title__c</fullName>
    <description>Used by B2B Marketing to trigger a flow to update Latest JDP url on the contact based on matching Account city and Latest JDP City</description>
    <inlineHelpText>Used by B2B Marketing to trigger a flow to update Latest JDP url on the contact based on matching Account city and Latest JDP City</inlineHelpText>
    <label>Latest import title</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>