force-app/main/default/objects/Contact/fields/Latest_Published_JDP_URL__c.field-meta.xml
<CustomField>
    <fullName>Latest_Published_JDP_URL__c</fullName>
    <description>https://heyjobs.atlassian.net/browse/RMO-69</description>
    <label>Latest Published JDP URL</label>
    <type>Url</type>
</CustomField>