force-app/main/default/objects/Contact/fields/Letter_Salutation_2__c.field-meta.xml
<CustomField>
    <fullName>Letter_Salutation_2__c</fullName>
    <description>Stores values depending on the main Salutation field / RO-1047</description>
    <label>Letter Salutation 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>