force-app/main/default/objects/Contact/fields/Lifecycle_Stage_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage_Contact__c</fullName>
    <description>RO-1654 Synced from Hubspot</description>
    <inlineHelpText>Zeigt die Marketing Phase an, in der sich der Kontakt befindet.</inlineHelpText>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Stage</valueSetName>
    </valueSet>
</CustomField>