force-app/main/default/objects/Contact/fields/Linkedin_Person__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Person__c</fullName>
    <label>Linkedin Person</label>
    <type>Url</type>
</CustomField>