force-app/main/default/objects/Contact/fields/Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Profile__c</fullName>
    <inlineHelpText>Zeigt den Link zum LinkedIn Profil des Kontakts.</inlineHelpText>
    <label>Linkedin Profile</label>
    <type>Url</type>
</CustomField>