force-app/main/default/objects/Contact/fields/Live_Event_Comments_new__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Comments_new__c</fullName>
    <description>field was changed to long text area due to sync errors</description>
    <inlineHelpText>Notizen über Leads von Sales-Reps bei Messen und Veranstaltungen.</inlineHelpText>
    <label>Live Event Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>