force-app/main/default/objects/Contact/fields/mkt_content__c.field-meta.xml
<CustomField>
    <fullName>mkt_content__c</fullName>
    <description>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</description>
    <inlineHelpText>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</inlineHelpText>
    <label>mkt_content</label>
    <length>150</length>
    <type>Text</type>
</CustomField>