force-app/main/default/objects/Contact/fields/mkt_source__c.field-meta.xml
<CustomField>
    <fullName>mkt_source__c</fullName>
    <description>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</description>
    <inlineHelpText>Attribution fields from the b2b_mta bi_analytics_dbt model pulled in via hightouch.</inlineHelpText>
    <label>mkt_source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>