force-app/main/default/objects/Contact/fields/Most_Recent_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Disqualification_Reason__c</fullName>
    <description>RO-2710</description>
    <inlineHelpText>Falls die letzte MQL Aufgabe mit einer Disqualifikation abgeschlossen wurde wird der Grund in diesem Feld festgehalten.</inlineHelpText>
    <label>Most Recent Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disqualification_Reasons</valueSetName>
    </valueSet>
</CustomField>