force-app/main/default/objects/Contact/fields/Most_Recent_MQL_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MQL_SLA_Status__c</fullName>
    <description>Rollup of the most recent MQL SLA status from the task to the contact.</description>
    <inlineHelpText>Rollup of the most recent MQL SLA status from the task to the contact.</inlineHelpText>
    <label>Most Recent MQL SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>