force-app/main/default/objects/Contact/fields/Most_recent_qualification_outcome__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_qualification_outcome__c</fullName>
    <description>RO-2710</description>
    <inlineHelpText>Hält fest, mit welchem Ergebnis die letzte MQL Aufgabe abgeschlossen wurden (bspw. Opportunity erstellt, Kontaktrolle erstellt oder Disqualifiziert).</inlineHelpText>
    <label>Most Recent Qualification Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualification_Outcomes</valueSetName>
    </valueSet>
</CustomField>