force-app/main/default/objects/Contact/fields/Most_Recent_Spec_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Spec_Disqualification_Reason__c</fullName>
    <description>RO-2712</description>
    <label>Most Recent Spec Disqualification Reason</label>
    <type>TextArea</type>
</CustomField>