force-app/main/default/objects/Contact/fields/MQL_Context_c__c.field-meta.xml
<CustomField>
    <fullName>MQL_Context_c__c</fullName>
    <description>Consolidated view of all relevant MQL topics</description>
    <inlineHelpText>Consolidated view of all relevant MQL topics</inlineHelpText>
    <label>Legacy MQL Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>