force-app/main/default/objects/Contact/fields/MQL_Conversion_Blocked_Until__c.field-meta.xml
<CustomField>
    <fullName>MQL_Conversion_Blocked_Until__c</fullName>
    <description>RO-2712</description>
    <label>MQL Conversion Blocked Until</label>
    <type>Date</type>
</CustomField>