force-app/main/default/objects/Contact/fields/MQL_Conversion_c__c.field-meta.xml
<CustomField>
    <fullName>MQL_Conversion_c__c</fullName>
    <description>This property essentially captures the most recent conversion that led to an MQL status</description>
    <inlineHelpText>Zeigt den Marketing Engagement-Touchpoint (Content, Marketing-Formular usw.) an, der den Kontakt zu einem MQL gemacht hat. Hier findest du eine Erklärung und einen Gesprächseinstieg für jeden MQL Conversion Wert: https://app.langdock.com/chat?a=2eb99729-f855-45b7-a4c5-cf3f5d3cda2f</inlineHelpText>
    <label>MQL Conversion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>