force-app/main/default/objects/Contact/fields/MQL_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>MQL_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Labelled MQL</label>
    <type>Checkbox</type>
</CustomField>