force-app/main/default/objects/Contact/fields/MQL_Marketing_campaign__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_campaign__c</fullName>
    <label>MQL Marketing campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>