force-app/main/default/objects/Contact/fields/MQL_Marketing_medium__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_medium__c</fullName>
    <label>MQL Marketing medium</label>
    <type>TextArea</type>
</CustomField>