force-app/main/default/objects/Contact/fields/MQL_Marketing_source_date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_source_date__c</fullName>
    <description>Populated when the MQL Marketing source is updated</description>
    <label>MQL Marketing source date</label>
    <type>Date</type>
</CustomField>