force-app/main/default/objects/Contact/fields/MQL_Source_c__c.field-meta.xml
<CustomField>
    <fullName>MQL_Source_c__c</fullName>
    <description>RO-1749</description>
    <label>MQL Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>