force-app/main/default/objects/Contact/fields/MQL_Type_Contact__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type_Contact__c</fullName>
    <description>MQL Types based on Hubspot criteria. Synced from HS to SF Lead and Contact</description>
    <inlineHelpText>Zeigt den Typ des MQLs an (1, 2, 3, oder 4) und hilft Sales, den Kontakt zu priorisieren. Hier kannst du mehr Infos zu den MQL Types finden. https://heyjobs.atlassian.net/wiki/spaces/EOP/pages/3107455666/MQL+to+Demo+Process#MQL-Type</inlineHelpText>
    <label>MQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Type</valueSetName>
    </valueSet>
</CustomField>