force-app/main/default/objects/Contact/fields/MST_Timestamp_1__c.field-meta.xml
<CustomField>
    <fullName>MST_Timestamp_1__c</fullName>
    <label>MST Timestamp 1</label>
    <length>92768</length>
    <type>LongTextArea</type>
</CustomField>