force-app/main/default/objects/Contact/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This contact hasn&apos;t been contacted via Outbound yet</description>
    <inlineHelpText>Not contacted via outbound measures.</inlineHelpText>
    <label>New Contact</label>
    <type>Checkbox</type>
</CustomField>