force-app/main/default/objects/Contact/fields/New_Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Scoring__c</fullName>
    <description>Used as replacement for legacy engagement score</description>
    <label>New Lead Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>