force-app/main/default/objects/Contact/fields/ONB2__ContactRole__c.field-meta.xml
<CustomField>
    <fullName>ONB2__ContactRole__c</fullName>
    <description>This field is used to pre-populate contact and address fields when creating invoices, account statements or dunning reminders.</description>
    <inlineHelpText>This field is used to pre-populate contact and address fields when creating invoices, account statements or dunning reminders.</inlineHelpText>
    <label>JustOn Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Mailing Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Email Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Email CC Contact</fullName>
            </value>
            <value>
                <fullName>Invoice Email BCC Contact</fullName>
            </value>
            <value>
                <fullName>Dunning Contact</fullName>
            </value>
            <value>
                <fullName>Dunning Mailing Contact</fullName>
            </value>
            <value>
                <fullName>Dunning Email Contact</fullName>
            </value>
            <value>
                <fullName>Dunning Email CC Contact</fullName>
            </value>
            <value>
                <fullName>Dunning Email BCC Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>