force-app/main/default/objects/Contact/fields/Onboarding_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Contact</label>
    <type>Checkbox</type>
</CustomField>