force-app/main/default/objects/Contact/fields/Operational_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operational_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if this is the main contact person of the account
RO-1317 - Field should get reviewed in 6-12 months. Please don&apos;t build any automation based on this field, since it might be removed after the review!</description>
    <inlineHelpText>Shows if this is the main contact person of the account</inlineHelpText>
    <label>Operational Contact</label>
    <type>Checkbox</type>
</CustomField>