force-app/main/default/objects/Contact/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 2158.</description>
    <inlineHelpText>Zeigt die zuletzt geöffnete Opportunity an, auf der der Kontakt eine Contact Role war.</inlineHelpText>
    <label>Latest Open Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>