force-app/main/default/objects/Contact/fields/Opt_Out_Cold_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Cold_Marketing_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn du einen einzelnen Kontakt von Marius Luther Emails ausschließen möchtest, setze hier einen Haken. (Gilt auch für Mails von Tim Koch, Janosch etc.) - Wenn alle Kontakte eines Accounts geblockt werden sollen, nutze das gleichnamige Feld auf Account Level</inlineHelpText>
    <label>Opt Out Cold Marketing Email</label>
    <type>Checkbox</type>
</CustomField>