force-app/main/default/objects/Contact/fields/Opted_in_E_Learning_HR_Knowledge_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_E_Learning_HR_Knowledge_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS sync</description>
    <label>Legacy Opted in: E-Learning &amp; HR Kno</label>
    <type>Checkbox</type>
</CustomField>