force-app/main/default/objects/Contact/fields/Outreach_Label__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Label__c</fullName>
    <description>Populated from email labelling</description>
    <label>Legacy-Outreach Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Opt-out/Blacklist</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>