force-app/main/default/objects/Contact/fields/Owner_YCBM_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_YCBM_Link__c</fullName>
    <formula>Account.Owner.urlYouCanBookMeLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner YCBM Link</label>
    <type>Text</type>
</CustomField>