force-app/main/default/objects/Contact/fields/Phone_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Phone_Enriched__c</fullName>
    <description>Phone number that is pulled from an enrichment provider. To be copied over to the actual phone fields (business phone/mobile) once verified.</description>
    <inlineHelpText>Phone number that is pulled from an enrichment provider. To be copied over to the actual phone fields (business phone/mobile) once verified.</inlineHelpText>
    <label>Phone (Enriched)</label>
    <type>Phone</type>
</CustomField>