force-app/main/default/objects/Contact/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <description>RO - 2145</description>
    <inlineHelpText>Zeigt die Prioritätsstufe (1-3) eines Kontakts, um zu erkennen, welche Kontakte am relevantesten sind. Kontakte mit hoher Priorität sollten Priority Level=1 haben. Kontakt mit niedriger Priorität sollten Priority Level=3 haben.</inlineHelpText>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>