force-app/main/default/objects/Contact/fields/Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion__c</fullName>
    <description>RO-1605</description>
    <inlineHelpText>Zeigt den letzten Marketing Engagement-Touchpoint an, den der Kontakt hatte.</inlineHelpText>
    <label>Recent Conversion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>