force-app/main/default/objects/Contact/fields/Recruiter_ID__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Identifier for the recruiters created in portal</description>
    <externalId>true</externalId>
    <inlineHelpText>ID (Unique Identifier) des Recruiters aus dem Backend (RecruiterPortal)  (ähnlich wie die Company ID auf Account, nur auf Kontaktebene)</inlineHelpText>
    <label>Recruiter ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>