force-app/main/default/objects/Contact/fields/Report_Marker__c.field-meta.xml
<CustomField>
    <fullName>Report_Marker__c</fullName>
    <description>Field is used to mark specific contacts for reports. Populate a specific string and use reports filtered on that string. Only for temporary use.</description>
    <inlineHelpText>Field is used to mark specific contacts for reports. Populate a specific string and use reports filtered on that string. Only for temporary use.</inlineHelpText>
    <label>Legacy Report_Marker</label>
    <length>18</length>
    <type>Text</type>
</CustomField>