force-app/main/default/objects/Contact/fields/Responded_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Responded_to_Email__c</fullName>
    <description>To track how contacts responded to email campaigns. It will used lateron to filter them for future campaign.</description>
    <inlineHelpText>To track how contacts responded to email campaigns.</inlineHelpText>
    <label>Responded to Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>