force-app/main/default/objects/Contact/fields/Sales_Signal__c.field-meta.xml
<CustomField>
    <fullName>Sales_Signal__c</fullName>
    <label>Sales Signal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>