force-app/main/default/objects/Contact/fields/SLA_1_status__c.field-meta.xml
<CustomField>
    <fullName>SLA_1_status__c</fullName>
    <description>RO - 2355</description>
    <inlineHelpText>Der SLA 1 Status spiegelt den aktuellen Status des MQL wider</inlineHelpText>
    <label>SLA 1 status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Met within Tolerance</fullName>
            </value>
            <value>
                <fullName>Met above Tolerance</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>