force-app/main/default/objects/Contact/fields/SLA_1_Time_taken__c.field-meta.xml
<CustomField>
    <fullName>SLA_1_Time_taken__c</fullName>
    <formula>IF(
    ISPICKVAL(SLA_1_status__c, &quot;&quot;),
    NULL,
    IF(
        AND(
            NOT(ISPICKVAL(SLA_1_status__c, &quot;Lost&quot;)),
            OR(
                ISNULL(Timestamp_Latest_Opp_Contact_Role__c),
                Timestamp_Latest_Opp_Contact_Role__c &lt; Timestamp_Became_a_MQL_Contact_Latest__c
            ),
            ISPICKVAL(Account.Stage_ACM__c, &quot;Prospect&quot;)
        ),
        (NOW() - Timestamp_Became_a_MQL_Contact_Latest__c) * 24,
        IF(
            AND(
                NOT(ISNULL(Timestamp_Latest_Opp_Contact_Role__c)),
                Timestamp_Latest_Opp_Contact_Role__c &gt; Timestamp_Became_a_MQL_Contact_Latest__c
            ),
            (Timestamp_Latest_Opp_Contact_Role__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24,
            IF(
                AND(
                    ISPICKVAL(SLA_1_status__c, &quot;Lost&quot;),
                    Account.Timestamp_Acc_Lifecycle_Stage_Outbound__c &gt; Timestamp_Became_a_MQL_Contact_Latest__c
                ),
                (Account.Timestamp_Acc_Lifecycle_Stage_Outbound__c - Timestamp_Became_a_MQL_Contact_Latest__c) * 24,
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA 1 Time taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>