force-app/main/default/objects/Contact/fields/SSSU_FUP_Trigger_marker__c.field-meta.xml
<CustomField>
    <fullName>SSSU_FUP_Trigger_marker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO - 1629</description>
    <inlineHelpText>When checked, the account will be addressed by marketing again.</inlineHelpText>
    <label>Legacy SSSU FUP Trigger marker</label>
    <type>Checkbox</type>
</CustomField>